# strikepoint

./: .clang-format  .gitignore  CLAUDE.md  LICENSE  README.md  SETUP.md  app.py  demo.py  dev.ipynb  diagnose.py  lepton.py  main-laptop.py  main-rpi.py  main.py
cpp/: .clang-format  CMakeLists.txt  compile
cpp/sdk/: LEPTON_AGC.h
cpp/src/: audio-pcm.cpp  audio-pcm.h  audio-wav.cpp  audio-wav.h  audio.cpp  audio.h  driver.cpp  driver.h  error.cpp  error.h  lepton-hardware.cpp  lepton-hardware.h  lepton.cpp  lepton.h  logging.cpp  logging.h  timer.cpp  timer.h
cpp/test/: audio-wav.cpp  lepton-file.cpp  lepton-file.h  test-audio.cpp  test-driver.cpp  test-lepton.cpp  test_audio.cpp  test_lepton.cpp  tests.cpp
cpp/utils/: capture.c
dev/: audio.ipynb  calibrate.ipynb  launch.ipynb
driver/: Makefile  __init__.py  demo.c  driver.c  driver.h
lepton/: CMakeLists.txt  Makefile  capture.c  compile  driver.c  driver.h  tests.cpp
lepton/sdk/: LEPTON_RAD.h
lepton/src/: driver.c  driver.h
lepton/test/: tests.cpp
leptonDriver/: Makefile  README.md  capture.c  demo.c  driver.c  driver.h
static/css/: app.css
static/js/: app.js
strikepoint/: app.py  database.py  driver.py  events.py  frames.py  imaging.py  logger.py  logging.py  producer.py
strikepoint/dash/: app.py  calibrate.py  content.py  events.py  strike.py
strikepoint/driver/: __init__.py
strikepoint/engine/: calibrate.py  strike.py  util.py
strikepoint/web/: app.py  content.py  sse.py
templates/: base.html  history.html  logs.html  strike.html
test/: test_content.py  test_dash_event_queue_manager.py  test_driver.py  test_frames.py  test_webapp_e2e_unittest.py
